--- a/KrystalJewellery.css
+++ b/KrystalJewellery.css
@@ -23,12 +23,18 @@ nav {
     background: white;
     box-shadow: 0 3px 10px -2px rgba(0,0,0,.4);
     border: 2px solid rgba(0,0,0,.1);
+    margin-top: 10px;
   }
   
   nav ul {
     list-style: none;
     text-align: center;
   }
+
+  nav ul a {
+    cursor: pointer;
+  }
+
   nav ul li {
     display: inline-block;
   }
@@ -294,7 +300,7 @@ section img.top:hover {
   margin-top: -30px;
   height: 52px;
   width: 100%;
-  margin-left: 45px;
+  margin-left: 20px;
 }
 
 .price2 {
@@ -314,7 +320,7 @@ section img.top:hover {
   margin-top: -30px;
   height: 52px;
   width: 100%;
-  margin-left: 28px;
+  margin-left: 17px;
 }
 
 .price4 {
@@ -324,7 +330,7 @@ section img.top:hover {
   margin-top: -30px;
   height: 52px;
   width: 100%;
-  margin-left: 68px;
+  margin-left: 20px;
 }
 
 .button4 {
@@ -343,7 +349,7 @@ section img.top:hover {
   align-items: center;
   justify-content: center;
   margin: 20px;
-  margin-left: 60px;
+  margin-left: 100px;
 }
 
 .button4 a {
@@ -772,6 +778,7 @@ h3 {
   margin-left: 20px;
   width: 50px;
   height: 50px;
+  margin-top: 20px;
 }
 
 /*footer*/
@@ -797,36 +804,42 @@ h4 {
   line-height: 24px;
 }
 
-.my-account ul {
-  margin-top: 40px;
+.container-footer li:hover {
+  color: #c09a5d;
+}
+
+.container-footer {
+  position: relative;
+  display: flex;
+  align-content: center;
+  margin-left: 10%;
 }
 
 .my-account {
-  margin-left: 20%;
+  width: 20%;
 }
 
 .Jewellery-info {
-  margin-left: 40%;
-  position: relative;
+ margin-left: -100px;
 }
 
 .contact-us {
-  margin-left: 60%;
+  margin-left: 60px;
 }
 
 .office-hours {
-  margin-left: 80%;
+  margin-left: 50px;
+  width: 15%;
 }
 
 .uremail {
   border:0;
-  height: 35px;
-  width: 300px;
+  height: 30px;
+  width: 150px;
   padding: 5px 10px;
   letter-spacing: 2px;
   font-size: 10px;
   text-transform: uppercase;
-  margin-top: 10px;
 }
 
 .button-search {
@@ -838,11 +851,18 @@ h4 {
   color: white;
   text-transform: uppercase;
   font-size: 10px;
+  cursor: pointer;
+}
+
+.letras-pequenas {
+  font-size: 10px;
+  line-height: 1.8;
+  margin-top: 5px;
 }
 
 .be1st2know {
-  font-size: 10px;
-  margin-top: 10px;
+  margin-left: 30px;
+  width: 20%;
 }
 
 /* LOGIN 
